# greenhouse

./: .gitignore  README.md  vue_config.nginx
arduino-greenhouse/: README.md  greenhouse.c  send_sensor_data.c
arduino-greenhouse/send_sensor_data/: send_sensor_data.ino
raspi-greenhouse/: README.md  convertBLETemp.sh  receive_sensor_data.cpp  receive_sensor_data.rs
raspi-greenhouse/cpp/: Makefile  README.md  receive_sensor_data.cpp  receiver.cpp
raspi-greenhouse/python/: PromServer.py
raspi-greenhouse/rust-consolidate/: Cargo.toml  Rocket.toml
raspi-greenhouse/rust-consolidate/data/: test.txt  test_h1.txt  test_t1.txt
raspi-greenhouse/rust-consolidate/src/: main.rs
raspi-greenhouse/rust-sensor/: Cargo.toml
raspi-greenhouse/rust-sensor/src/: receive_sensor_data.rs
raspi-greenhouse/rust/src/: main.rs
rust-greenhouse/: Cargo.toml  Rocket.toml
rust-greenhouse/src/: main.rs
vuejs-greenhouse/: README.md  package.json
vuejs-greenhouse/public/: index.html
vuejs-greenhouse/src/: App.vue
vuejs-greenhouse/src/components/: Greenhouse.vue
