[package]
name = "rust-consolidate"
version = "0.1.0"
authors = ["Sascha Koch <sascha.koch@web.de>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
itertools = "0.8"
rocket = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json"]